# mmao

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: paper-coverage.md  reproducibility.md
examples/: quickstart.py
src/mmao/: __init__.py  api.py  cli.py  examples.py  results.py
src/mmao/classification/: __init__.py  core.py  datasets.py
src/mmao/common/: __init__.py  types.py  utils.py
src/mmao/continuous/: __init__.py  benchmarks.py  core.py
src/mmao/data/: __init__.py
src/mmao/data/orlib/: __init__.py
src/mmao/data/tsplib/: __init__.py
src/mmao/discrete/: __init__.py  knapsack.py  tsp.py
src/mmao/dynamic/: __init__.py  benchmarks.py  core.py
src/mmao/io/: __init__.py  bundled.py  orlib.py  tsplib.py
tests/: test_api_smoke.py  test_cli_smoke.py  test_io_and_results.py
tests/data/: sample_mkp.txt
