[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmao-opt"
version = "0.2.0"
description = "A metabolic multi-agent optimization framework for continuous, discrete, dynamic, and classification-oriented search."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jinliang Xu", email = "jlxufly@gmail.com" },
  { name = "Liping Ma", email = "lipingmaqzx@163.com" }
]
keywords = ["optimization", "metaheuristic", "multi-agent", "benchmarking", "auto-configuration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]
license-files = ["LICENSE"]
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
io = [
  "tsplib95>=0.7.1",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.scripts]
mmao = "mmao.cli:main"

[project.urls]
Homepage = "https://github.com/wolfbrother/mmao"
Repository = "https://github.com/wolfbrother/mmao"
Issues = "https://github.com/wolfbrother/mmao/issues"
Documentation = "https://github.com/wolfbrother/mmao#readme"
Changelog = "https://github.com/wolfbrother/mmao/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"mmao.data.tsplib" = ["*.tsp"]
"mmao.data.orlib" = ["*.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
